[project]
name = "xircuits-mcp"
version = "0.1.0"
description = "Xircuits component library for implementing Model Context Protocol (MCP) servers"
authors = [{ name = "Eduardo Gonzalez", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xpressai/xai-mcp"
keywords = ["xircuits", "mcp", "model-context-protocol", "agents", "ai"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "example.xircuits"
requirements_path = "requirements.txt"
